# taurus

./: .codecov.yml  .dockerignore  .gitignore  .scrutinizer.yml  .travis.yml  CLAUDE.md  Dockerfile  Dockerfile.deploy  Jenkinsfile  LICENSE  MANIFEST.in  NOTICE  README.md  appium.yml  appveyor.yml  bbg.yml  build-artifacts.bash  build-artifacts.sh  build-base-site.sh  build-brew.sh  build-docker.sh  build-info.sh  build-sdist.sh  build-snapshot-site.sh  build-snapshot.sh  build-windows-installer.sh  bzt-install-tools.sh  bzt.rb  bzt.sh  constraints.txt  cypress.json  deploy-site.sh  dockerized-release.sh  dotnet.sh  empty.py  fix-bzt-pip.change  gen_installer.py  getsize.py  installer.cfg  jenkins.sh  (+16 more)
.claude/vulnerabilities_history/: vulnerability_history.md
.github/workflows/: ci.yaml
2020-10-26_11-40-32.804612/: effective.json  effective.yml
2020-10-26_11-41-30.799226/: effective.json  effective.yml
2020-10-26_11-41-40.275633/: effective.json  effective.yml
2020-10-26_11-52-43.986152/: effective.json  effective.yml
2020-10-26_12-17-04.361431/: effective.json  effective.yml
2020-10-26_12-27-35.110738/: effective.json  effective.yml
2020-10-26_12-29-36.114501/: effective.json  effective.yml  j.yml  merged.json  merged.yml
apiritif/: __init__.py  utils.py
apirus/: __init__.py
appium/: appium.yml  test_appium.py
bzt/: 10-base.json  TestNGExample.yml  __init__.py  __main__.py  basic.yaml  basic_anon.yaml  blaze.js  bza.py  bza_old.py  bza_retry.py  bzt-configs.json  cli.py  commands.py  engine.py  environment_helpers.py  hdr_histogram.py  jmx.py  jmx2yaml.py  jmx2yml.py  k6.yaml  linter.py  moves.py  names.py  pause.py  remote.py  requests_model.py  runner.py  soapui2yaml.py  swagger2yaml.py  test_bza.py  utils.py  wdio-allex.yml  wdio.conf.js
bzt/engine/: __init__.py  dicts.py  engine.py  modules.py  names.py  templates.py
bzt/etc/: 10-base.json
bzt/jmx/: __init__.py  actions.py  assertions.py  base.py  extractors.py  (+10 more)
develop/: Dockerfile-base  Dockerfile-taurus  run_integration.sh
docker-base/: Dockerfile
docs/: Changelog.md  CommandLine.md  ConfigSyntax.md  DeveloperGuide.md  ExecutionSettings.md  Features.md  Home.md  Installation.md  Recipes.md  Reporting.md  ScenarioBuilding.md  Sidebar.md  Videos.md  _Sidebar.md
examples/: Jenkinsfile  all-executors.yml  bztdocker.sh  many-jmxses-one-machine.yml  proxy.yml
installer/: taurus_nsis.nsi
scripts/: _chromium-browser  chrome_launcher.sh  chromium-launcher  chromium_launcher.sh
site/: .dockerignore  Dockerfile  Dockerfile.deploy  aggregate_func.sql  app.yaml  backup.php  build-base-site.sh  build-snapshot-site.sh  cfg.php  composer.json  deploy-site.sh  index.php  php.ini  supervisord.conf  updates.php
tests/: __init__.py  base.py  bza_client_example.py  cases.py  json-to-yaml.py  mocks.py  phantom.sh  requirements.txt  test_ApiritifFramework.py  test_BZA.py  test_CLI.py  test_bza.py  test_configuration.py  test_engine.py  test_hdr_histogram.py  test_jmx2yaml.py  test_linter.py  test_multiPartForm.py  test_pyyaml.py  test_soapui2yaml.py  test_swagger2yaml.py  test_utils.py
(+1987 files in other folders)
